# datahub-dbt-lineage-repro

./: README.md  pyproject.toml
datahub/: 01_bigquery.dhub.yaml  02_dbt.dhub.yaml
dbt/: dbt_project.yml
dbt/models/sources/: sources.yml
dbt/models/v1_0/: articles.sql
dbt/seeds/: articles_landing.csv
