[tool.poetry]
name = "lineage-repro"
version = "0.1.0"
description = ""
authors = ["Adriano Vega Llobell <adriano.vega@frontiersin.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.8.7"
dbt-bigquery = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
